--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -20,16 +20,16 @@
         <!-- 回答はクラスq5の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+        <div class="q5 q5__content">
+          <div class="element pink">8</div>
+          <div class="element green">5</div>
+          <div class="element orange">1</div>
+          <div class="element brown">7</div>
+          <div class="element black">4</div>
+          <div class="element yellow">6</div>
+          <div class="element blue">2</div>
+          <div class="element water">3</div>
+          <div class="element marine">9</div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
