--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,7 +25,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
+              <div class="q6__box__ta">
                 <p>text-align</p>
               </div>
             </div>
@@ -34,7 +34,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <p class="q6__box__ma">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,8 +47,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
+          <div class="q6 q6--around q6__around__content">
+            <div class="q6__around__table">
               <p>table</p>
             </div>
           </div>
@@ -57,7 +57,7 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
+          <div class="q6 q6--around q6__around__flex">
             <p>flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -66,7 +66,7 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable">
+            <div class="q6__box is-stable q6__box__stable">
               <p class="q6__box__inner">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
@@ -74,7 +74,7 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible">
+            <div class="q6__box is-flexible q6__box__flexible">
               <p class="q6__box__inner">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
