--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,7 +25,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div class="q6__box__ta">
+              <div class="q6__box__center">
                 <p>text-align</p>
               </div>
             </div>
@@ -34,7 +34,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p class="q6__box__ma">margin</p>
+              <p class="q6__box__margin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
