「レイアウトパーツ後半」の修正を致しました。

--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -26,10 +26,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--float">
             <div class="q7__inner q7__content clearfix">
-              <div class="q7__box q7__text">
+              <div class="q7__box q7__text q7__basic">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7__text">
+              <div class="q7__box q7__text q7__basic">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -47,12 +47,12 @@
           <div class="q7 q7--table">
             <div class="q7__inner q7__table">
               <div class="q7__box q7__table__content">
-                <div class="q7__box__text q7__table__text left">
+                <div class="q7__box__text q7__table__text q7__basic">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
               <div class="q7__box q7__table__content">
-                <div class="q7__box__text q7__table__text">
+                <div class="q7__box__text q7__table__text q7__basic">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
               </div>
@@ -70,10 +70,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
             <div class="q7__inner q7__inline">
-              <div class="q7__box q7__inline__text">
+              <div class="q7__box q7__inline__text q7__basic">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7__inline__text">
+              <div class="q7__box q7__inline__text q7__basic">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -90,10 +90,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--flex">
             <div class="q7__inner q7__flex">
-              <div class="q7__box q7__flex__content">
+              <div class="q7__box q7__basic">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7__flex__content">
+              <div class="q7__box q7__basic">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -111,12 +111,12 @@
           <div class="q7 q7--margin">
             <div class="q7__inner is-full q7__margin__content">
               <div class="q7__box q7__fixed">
-                <div class="q7__box__text">
+                <div class="q7__box__text q7__margin__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
               <div class="q7__box q7__variable">
-                <div class="q7__box__text">
+                <div class="q7__box__text q7__margin__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                 </div>
               </div>
